--- a/tticket.toml
+++ b/tticket.toml
@@ -1,8 +1,8 @@
 [mysql]
  host = ""
  port = ""
- username = ""
- password = ""
+ username = "root"
+ password = "Aa123456"
 
 [mail]
  address = ""
