add summary mail
add summary mail

feat(ball): 优化ball num的展示顺序

--- a/tticket.toml
+++ b/tticket.toml
@@ -1,4 +1,5 @@
 [mysql]
+ db_name = ""
  host = ""
  port = ""
  username = ""
@@ -11,3 +12,4 @@
  username = ""
  password = ""
  host = ""
+ from_user = ""
